--- a/tests/group_vars/containers.yml
+++ b/tests/group_vars/containers.yml
@@ -1,27 +1,5 @@
 ---
 
-django_settings_templates:
-  - src: manage.py.j2
-    dest: "{{ django_app_path }}/manage.py"
-    mode: "a+x"
-  - src: local_settings.py.j2
-    dest: "{{ django_app_path }}/proj/local_settings.py"
+provision_docker_network: django
 
-django_settings: proj.settings
-
-django_pre_commands:
-  - check
-
-django_post_commands:
-  - command: test
-    apps: proj.app
-    failfast: yes
-
-django_static_root: "{{ django_app_path }}/proj/public/static"
-
-test_python3_version: "3.6"
-
-test_python3_executable: "python{{ test_python3_version }}"
-
-test_django2_version: "2.2.14"
-test_django3_version: "3.0.8"
+postgres_password: pgsecretpassword
