Include postgres container in tests.

--- a/tox.ini
+++ b/tox.ini
@@ -17,12 +17,12 @@ deps =
     ansible210: ansible>=2.10.0a1,<2.11
     docker
 setenv =
-    centos6: ANSIBLE_LIMIT=centos6
-    centos7: ANSIBLE_LIMIT=centos7
-    centos8: ANSIBLE_LIMIT=centos8
-    ubuntu16: ANSIBLE_LIMIT=ubuntu16
-    ubuntu18: ANSIBLE_LIMIT=ubuntu18
-    ubuntu20: ANSIBLE_LIMIT=ubuntu20
+    centos6: ANSIBLE_LIMIT=centos6,postgres
+    centos7: ANSIBLE_LIMIT=centos7,postgres
+    centos8: ANSIBLE_LIMIT=centos8,postgres
+    ubuntu16: ANSIBLE_LIMIT=ubuntu16,postgres
+    ubuntu18: ANSIBLE_LIMIT=ubuntu18,postgres
+    ubuntu20: ANSIBLE_LIMIT=ubuntu20,postgres
     ansible210: ANSIBLE_ACTION_PLUGINS=tests/action_plugins_210
     PYTHONDONTWRITEBYTECODE=1
     ANSIBLE_FORCE_COLOR=1
