Update requirements, update test matrices.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,19 +31,12 @@ matrix:
     - env: 'ANSIBLE_VERSION="ansible~=2.9.0" ANSIBLE_LIMIT="ubuntu16,postgres"'
     - env: 'ANSIBLE_VERSION="ansible~=2.9.0" ANSIBLE_LIMIT="ubuntu18,postgres"'
     - env: 'ANSIBLE_VERSION="ansible~=2.9.0" ANSIBLE_LIMIT="ubuntu20,postgres"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos6,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos7,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos8,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu16,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu18,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu20,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-  allow_failures:
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos6,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos7,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="centos8,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu16,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu18,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
-    - env: 'ANSIBLE_VERSION="ansible>=2.10.0a1,<2.11" ANSIBLE_LIMIT="ubuntu20,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="centos6,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="centos7,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="centos8,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="ubuntu16,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="ubuntu18,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
+    - env: 'ANSIBLE_VERSION="ansible~=2.10.0" ANSIBLE_LIMIT="ubuntu20,postgres" ANSIBLE_ACTION_PLUGINS="tests/action_plugins_210"'
 
 before_install:
   - sudo apt-get update -qq
